# ai-native-app

./: .env.test  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.cursor/rules/: 000-domain-and-architecture-mandate.md
.cursor/rules/naming-conventions/: RULE.md
.cursor/rules/pattern-00-master-architecture/: RULE.md
.cursor/rules/pattern-07-acl-translation/: RULE.md
docs/: development.md  documentation-strategy.md  install.md  philosophy.md
docs/app/: conversation-system.md  data-flow.md  domain-models.md  guide.md  immutability.md  llm-integration.md  pipeline-pattern.md  semantic-search.md  service-patterns.md  testing.md  type-system.md
docs/devtool/: ADT-architect.md
docs/infra/: configuration.md  guide.md  iac.md  orchestration.md  systems.md
docs/pattern/: README.md  app-api.md  app-persistence.md  app-repo-graph-store.md  app-repo-memory-store.md  app-repo-object-store.md  app-repo-sql-store.md  app-repo-vector-store.md  app-repo.md  app-service.md  app.md
infra/: generate-config.sh  init-db.sql  init.cypher  setup-minio.sh  setup-neo4j.sh  setup-ollama.sh
product/: outcome-focused-roadmapping.md
product/template/: lean-canvas-template.md  outcome-template.md  plan-template.md  roadmap-template.md  spec-template.md  tasks-template.md  vision-template.md
secrets/: .gitignore  README.md  env-template.txt
src/app/: __init__.py  config.py  main.py
src/app/api/: deps.py
src/app/api/contracts/: __init__.py  conversation.py  health.py
src/app/api/routers/: __init__.py  conversation.py  health.py
src/app/domain/: __init__.py  conversation.py  domain_type.py  domain_value.py  model_catalog.py  model_metadata.json  model_pool.py  pipeline.py  tools.py  vector_ingestion.py
src/app/service/: __init__.py  conversation.py  storage.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_conversation_api.py  test_health.py  test_vector_ingestion.py
tests/unit/domain/: __init__.py  test_conversation.py  test_model_catalog.py  test_pipeline.py
